--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -177,6 +177,9 @@
   "Settings_ModelExtensions": "Allowed model file extensions (comma-separated):",
   "Settings_SpecialModelValues": "Special values for 'Model' fields (comma-separated):",
   "Settings_SpecialModelValuesTooltip": "Values like 'None', 'Empty', etc., that will be available for selection in model fields.",
+  "Settings_SliderDefaults_Header": "Slider Defaults",
+  "Settings_SliderDefaults_Description1": "Rules for default slider values, one rule per line.",
+  "Settings_SliderDefaults_Description2": "Format: [NodeType::]FieldName=Min Max Step [Precision]",
   "Settings_Hotkeys": "Hotkeys (Info)",
   "Settings_Hotkey_Queue": "Start generation (same as 'Queue' button)",
   "Settings_Hotkey_NextImage": "Next image (in fullscreen mode)",
