--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -176,6 +176,9 @@
   "Settings_ModelExtensions": "Допустимые расширения файлов моделей (через запятую):",
   "Settings_SpecialModelValues": "Специальные значения для полей 'Model' (через запятую):",
   "Settings_SpecialModelValuesTooltip": "Значения типа 'None', 'Empty' и т.п., которые будут доступны для выбора в полях моделей.",
+  "Settings_SliderDefaults_Header": "Значения слайдеров по умолчанию",
+  "Settings_SliderDefaults_Description1": "Правила для значений слайдеров по умолчанию, одно правило на строку.",
+  "Settings_SliderDefaults_Description2": "Формат: [ТипНоды::]ИмяПоля=Мин Макс Шаг [Точность]",
   "Settings_Hotkeys": "Горячие клавиши (информация)",
   "Settings_Hotkey_Queue": "Запустить генерацию (аналог кнопки 'Queue')",
   "Settings_Hotkey_NextImage": "Следующее изображение (в полноэкранном режиме)",
