--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -277,5 +277,7 @@
   "XYGrid_YAxisField": "Y Axis Field (optional):",
   "XYGrid_YValues": "Y values (one per line):",
   "XYGrid_CreateGridImage": "Create grid image",
-  "XYGrid_ShowIndividualImages": "Show individual images"
+  "XYGrid_ShowIndividualImages": "Show individual images",
+  "UIConstructor_Field_UsePrefix": "Prefix",
+  "UIConstructor_Field_UsePrefixTooltip": "Prefix field names with node titles"
 }
