1) hide in taskbar undocked windows 2) hide console btn 3) rename preset btn => update preset btn with current values + rename

--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -249,6 +249,7 @@
   "Presets_DeleteConfirmTitle": "Подтвердите удаление",
   "Presets_DeleteConfirmMessage": "Вы уверены, что хотите безвозвратно удалить пресет '{0}'?",
   "Presets_ApplyTooltip": "Применить выбранный пресет повторно",
+  "Presets_UpdateTooltip": "Обновить пресет текущими значениями",
   "GlobalPresets_Header": "Глобальные пресеты",
   "GlobalPresets_Label": "Применить пресет:",
   "Tab_PauseQueue": "Поставить очередь на паузу (текущая задача завершится)",
