--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -250,6 +250,7 @@
   "Presets_DeleteConfirmTitle": "Confirm Deletion",
   "Presets_DeleteConfirmMessage": "Are you sure you want to permanently delete the preset '{0}'?",
   "Presets_ApplyTooltip": "Re-apply selected preset",
+  "Presets_UpdateTooltip": "Update preset with current values",
   "GlobalPresets_Header": "Global Presets",
   "GlobalPresets_Label": "Apply Preset:",
   "Tab_PauseQueue": "Pause the queue (current task will finish)",
