select fields contained in group preset

--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -255,6 +255,9 @@
   "Presets_DeleteConfirmMessage": "Вы уверены, что хотите безвозвратно удалить пресет '{0}'?",
   "Presets_ApplyTooltip": "Применить выбранный пресет повторно",
   "Presets_UpdateTooltip": "Обновить пресет текущими значениями",
+  "Presets_FieldsToInclude": "Поля для включения в пресет:",
+  "Presets_SelectAll": "Выбрать все",
+  "Presets_DeselectAll": "Снять все",
   "GlobalPresets_Header": "Глобальные пресеты",
   "GlobalPresets_Label": "Применить пресет:",
   "Tab_PauseQueue": "Поставить очередь на паузу (текущая задача завершится)",
