--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -256,6 +256,9 @@
   "Presets_DeleteConfirmMessage": "Are you sure you want to permanently delete the preset '{0}'?",
   "Presets_ApplyTooltip": "Re-apply selected preset",
   "Presets_UpdateTooltip": "Update preset with current values",
+  "Presets_FieldsToInclude": "Fields to include in the preset:",
+  "Presets_SelectAll": "Select All",
+  "Presets_DeselectAll": "Deselect All",
   "GlobalPresets_Header": "Global Presets",
   "GlobalPresets_Label": "Apply Preset:",
   "Tab_PauseQueue": "Pause the queue (current task will finish)",
