--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -121,6 +121,7 @@
   "UIConstructor_Field_ModelSubtype": "Model Subtype:",
   "UIConstructor_Field_SelectSubtype": "Select a subtype...",
   "UIConstructor_Field_Separator": "Separator:",
+  "UIConstructor_Field_SeparatorStyle": "Style:",
   "UIConstructor_SetColor": "Set Color",
   "UIConstructor_ClearColor": "Clear Color",
   "Inpaint_ErrorLoadingImageTitle": "Error",
@@ -245,6 +246,8 @@
   "UIConstructor_PythonPlaceholder": "Your Python script here",
   "UIConstructor_TestScriptTooltip": "Test Script",
   "UIConstructor_AddMarkdownField": "Add Markdown Field",
+  "UIConstructor_AddLabelField": "Add Label Field",
+  "UIConstructor_AddSeparatorField": "Add Separator Field",
   "UIConstructor_AddScriptButtonField": "Add Script Button",
   "UIConstructor_Hook_on_before_prompt_queue": "Before prompt is queued",
   "UIConstructor_Hook_on_batch_finished": "After batch is finished",
