--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -120,6 +120,7 @@
   "UIConstructor_Field_ModelSubtype": "Подтип модели:",
   "UIConstructor_Field_SelectSubtype": "Выберите подтип...",
   "UIConstructor_Field_Separator": "Разделитель:",
+  "UIConstructor_Field_SeparatorStyle": "Стиль:",
   "UIConstructor_SetColor": "Задать цвет",
   "UIConstructor_ClearColor": "Сбросить цвет",
   "Inpaint_ErrorLoadingImageTitle": "Ошибка",
@@ -244,6 +245,8 @@
   "UIConstructor_PythonPlaceholder": "Ваш Python скрипт здесь",
   "UIConstructor_TestScriptTooltip": "Тест скрипта",
   "UIConstructor_AddMarkdownField": "Добавить поле Markdown",
+  "UIConstructor_AddLabelField": "Добавить поле-заголовок",
+  "UIConstructor_AddSeparatorField": "Добавить разделитель",
   "UIConstructor_AddScriptButtonField": "Добавить кнопку-скрипт",
   "UIConstructor_Hook_on_before_prompt_queue": "Перед отправкой промпта в очередь",
   "UIConstructor_Hook_on_batch_finished": "После завершения всей пачки",
