--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -315,5 +315,7 @@
   "ContextMenu_ClearBlockedNodes": "Clear Blocked Nodes",
   "ContextMenu_SaveChanges": "Save Current Values to Workflow",
   "UIConstructor_ApiReplacedTitle": "API Replaced",
-  "UIConstructor_ApiReplacedSuccess": "The API workflow has been successfully replaced."
+  "UIConstructor_ApiReplacedSuccess": "The API workflow has been successfully replaced.",
+  "UIConstructor_Cut": "Cut",
+  "UIConstructor_Paste": "Paste"
 }
