--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -314,5 +314,7 @@
   "ContextMenu_ClearBlockedNodes": "Очистить список блокировок",
   "ContextMenu_SaveChanges": "Сохранить текущие значения в процесс",
   "UIConstructor_ApiReplacedTitle": "API Заменен",
-  "UIConstructor_ApiReplacedSuccess": "API воркфлоу был успешно заменен."
+  "UIConstructor_ApiReplacedSuccess": "API воркфлоу был успешно заменен.",
+  "UIConstructor_Cut": "Вырезать",
+  "UIConstructor_Paste": "Вставить"
 }
