--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -102,6 +102,11 @@
   "UIConstructor_ExportTooltip": "Save as a clean .json compatible with ComfyUI",
   "UIConstructor_AddGroup": "Add New Group",
   "UIConstructor_DeleteGroup": "Delete group",
+  "UIConstructor_Delete": "Delete",
+  "UIConstructor_ConfirmDeleteTitle": "Confirm Deletion",
+  "UIConstructor_ConfirmDeleteFieldsMessage": "Are you sure you want to delete the {0} selected fields?",
+  "UIConstructor_ConfirmDeleteFieldMessage": "Are you sure you want to delete the field '{0}'?",
+  "UIConstructor_ConfirmDeleteSubTabMessage": "Are you sure you want to delete the tab '{0}' from the group '{1}'?",
   "UIConstructor_ConfirmDeleteGroupTitle": "Confirmation",
   "UIConstructor_ConfirmDeleteGroupMessage": "Are you sure you want to delete the group '{0}'?",
   "UIConstructor_NewGroupDefaultName": "New Group {0}",
