--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -101,6 +101,11 @@
   "UIConstructor_ExportTooltip": "Сохранить как чистый .json, совместимый с ComfyUI",
   "UIConstructor_AddGroup": "Добавить новую группу",
   "UIConstructor_DeleteGroup": "Удалить группу",
+  "UIConstructor_Delete": "Удалить",
+  "UIConstructor_ConfirmDeleteTitle": "Подтверждение удаления",
+  "UIConstructor_ConfirmDeleteFieldsMessage": "Вы уверены, что хотите удалить {0} выделенных полей?",
+  "UIConstructor_ConfirmDeleteFieldMessage": "Вы уверены, что хотите удалить поле '{0}'?",
+  "UIConstructor_ConfirmDeleteSubTabMessage": "Вы уверены, что хотите удалить вкладку '{0}' из группы '{1}'?",
   "UIConstructor_ConfirmDeleteGroupTitle": "Подтверждение",
   "UIConstructor_ConfirmDeleteGroupMessage": "Вы уверены, что хотите удалить группу '{0}'?",
   "UIConstructor_NewGroupDefaultName": "Новая группа {0}",
