new_preset_system
# Conflicts:
#	Comfizen/ViewModels/InputFieldViewModels.cs

todo: update on delete, save presets. fixes https://aistudio.google.com/prompts/1WkkLudS_cB27HLPQF5jKsgmy572IGJ2p

fix update

save as layout/snippet. sync layers

sync on load

implement TriggerPendingHighlightsForTab for new preset system

export/import new presets

confirmation delete message settings, expor/import presets more readable

preset store nodebypass value

sync active preset layers

fix double presets popup from undocked group window

fix inpainteditor scroll

missed BooleanAndConverter.cs

fix save last active tabs, order, inpainteditor masks, sketches etc

ToolTips and update presets buttons

ToolTips show values and restyle presets

extended layout tooltip

TextWrapping

final tooltips fixes

better tooltips and active layers sync

--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -189,6 +189,7 @@
   "Settings_Language": "Language:",
   "Settings_MaxRecentWorkflows": "Number of recent workflows in the list:",
   "Settings_ConfirmDelete": "Request confirmation when deleting from the gallery",
+  "Settings_ConfirmPresetDelete": "Request confirmation when deleting presets",
   "Settings_Models": "Models",
   "Settings_ModelExtensions": "Allowed model file extensions (comma-separated):",
   "Settings_SpecialModelValues": "Special values for 'Model' fields (comma-separated):",
@@ -334,10 +335,28 @@
   "Presets_ExportSuccessTitle": "Export Complete",
   "Presets_ExportSuccessMessage": "Presets for group '{0}' have been successfully exported.",
   "Presets_ImportConfirmTitle": "Confirm Import",
-  "Presets_ImportConfirmMessage": "This action will REPLACE ALL existing presets for group '{0}' with the presets from the file. Are you sure you want to continue?",
+  "Presets_ImportConfirmMessage": "Found {0} presets. How would you like to import them into group '{1}'?\n\n • Yes: Replace all existing presets.\n • No: Merge, updating existing and adding new ones.\n • Cancel: Cancel the import.",
   "Presets_ImportSuccessTitle": "Import Complete",
   "Presets_ImportSuccessMessage": "Presets for group '{0}' have been successfully imported.",
   "Presets_ImportErrorTitle": "Import Error",
   "Presets_ImportErrorMessage": "Failed to import presets. The file may be corrupt or in an invalid format.",
-  "Presets_GroupHasPresetsTooltip": "This group has saved presets"
+  "Presets_GroupHasPresetsTooltip": "This group has saved presets",
+  "Presets_LayersButtonTooltip": "Manage Preset Layers",
+  "Presets_ActiveLayers": "Active Layers:",
+  "Presets_Layouts": "Layouts:",
+  "Presets_Snippets": "Snippets:",
+  "Presets_ReapplyTooltip": "Re-apply layer",
+  "Presets_DetachTooltip": "Detach layer",
+  "Presets_State_Unsaved": "State: Unsaved",
+  "Presets_State_Modified": "State: Modified '{0}'",
+  "Presets_State_Single": "State: Preset '{0}'",
+  "Presets_State_Multiple": "State: {0} layers",
+  "Presets_State_Modified_Tooltip": "(modified)",
+  "Presets_SaveAsSnippet": "Save as Snippet",
+  "Presets_SaveAsLayout": "Save as Layout (composition)",
+  "Presets_SearchPlaceholder": "Search presets...",
+  "Presets_LayoutContains": "Contains snippets:",
+  "Presets_SnippetModifies": "Modifies fields:",
+  "Presets_Base64Placeholder": "[Base64 Image]",
+  "Presets_LayoutModifies": "Will affect fields:"
 }
