--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -188,6 +188,7 @@
   "Settings_Language": "Язык:",
   "Settings_MaxRecentWorkflows": "Количество последних воркфлоу в списке:",
   "Settings_ConfirmDelete": "Запрашивать подтверждение при удалении из галереи",
+  "Settings_ConfirmPresetDelete": "Запрашивать подтверждение при удалении пресетов",
   "Settings_Models": "Модели",
   "Settings_ModelExtensions": "Допустимые расширения файлов моделей (через запятую):",
   "Settings_SpecialModelValues": "Специальные значения для полей 'Model' (через запятую):",
@@ -333,10 +334,28 @@
   "Presets_ExportSuccessTitle": "Экспорт завершен",
   "Presets_ExportSuccessMessage": "Пресеты для группы '{0}' успешно экспортированы.",
   "Presets_ImportConfirmTitle": "Подтвердите импорт",
-  "Presets_ImportConfirmMessage": "Это действие заменит ВСЕ существующие пресеты для группы '{0}' пресетами из файла. Вы уверены, что хотите продолжить?",
+  "Presets_ImportConfirmMessage": "Найдено {0} пресетов. Как вы хотите их импортировать в группу '{1}'?\n\n • Да (Yes): Заменить все существующие пресеты.\n • Нет (No): Объединить, обновив существующие и добавив новые.\n • Отмена (Cancel): Отменить импорт.",
   "Presets_ImportSuccessTitle": "Импорт завершен",
   "Presets_ImportSuccessMessage": "Пресеты для группы '{0}' успешно импортированы.",
   "Presets_ImportErrorTitle": "Ошибка импорта",
   "Presets_ImportErrorMessage": "Не удалось импортировать пресеты. Файл может быть поврежден или иметь неверный формат.",
-  "Presets_GroupHasPresetsTooltip": "Эта группа имеет сохраненные пресеты"
+  "Presets_GroupHasPresetsTooltip": "Эта группа имеет сохраненные пресеты",
+  "Presets_LayersButtonTooltip": "Управление слоями пресетов",
+  "Presets_ActiveLayers": "Активные слои:",
+  "Presets_Layouts": "Макеты:",
+  "Presets_Snippets": "Фрагменты:",
+  "Presets_ReapplyTooltip": "Переприменить слой",
+  "Presets_DetachTooltip": "Открепить слой",
+  "Presets_State_Unsaved": "Состояние: Не сохранено",
+  "Presets_State_Modified": "Состояние: Изменен '{0}'",
+  "Presets_State_Single": "Состояние: Пресет '{0}'",
+  "Presets_State_Multiple": "Состояние: {0} слоёв",
+  "Presets_State_Modified_Tooltip": "(изменен)",
+  "Presets_SaveAsSnippet": "Сохранить как Фрагмент",
+  "Presets_SaveAsLayout": "Сохранить как Макет (композицию)",
+  "Presets_SearchPlaceholder": "Поиск пресетов...",
+  "Presets_LayoutContains": "Содержит фрагменты:",
+  "Presets_SnippetModifies": "Изменяет поля:",
+  "Presets_Base64Placeholder": "[Изображение Base64]",
+  "Presets_LayoutModifies": "Итого затронет поля:"
 }
