perfect node bypass
refactor

test new restore inputs logic

better way for nodebypass restore connection

--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -357,5 +357,9 @@
   "Presets_LayoutContains": "Содержит фрагменты:",
   "Presets_SnippetModifies": "Изменяет поля:",
   "Presets_Base64Placeholder": "[Изображение Base64]",
-  "Presets_LayoutModifies": "Итого затронет поля:"
+  "Presets_LayoutModifies": "Итого затронет поля:",
+  "MainVM_ExportBypassTitle": "Экспорт с узлами обхода",
+  "MainVM_ExportBypassMessage": "Этот процесс содержит узлы обхода (bypass). Как его следует экспортировать?\n\n• Да (Yes): Восстановить все соединения перед экспортом. (Рекомендуется для редактирования в ComfyUI)\n• Нет (No): Экспортировать 'как есть', с примененными байпасами. (Для отладки)\n• Отмена (Cancel): Отменить экспорт.",
+  "UIConstructor_ConfirmApiReplaceTitle": "Подтвердите замену API",
+  "UIConstructor_ConfirmApiReplaceMessage": "Текущий процесс содержит узлы обхода (bypass). Замена API очистит снимки соединений, что необходимо для корректного применения изменений.\n\nРекомендуется сначала экспортировать текущее состояние со всеми восстановленными соединениями для редактирования.\n\nВы хотите продолжить замену?",
 }
