--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -358,5 +358,9 @@
   "Presets_LayoutContains": "Contains snippets:",
   "Presets_SnippetModifies": "Modifies fields:",
   "Presets_Base64Placeholder": "[Base64 Image]",
-  "Presets_LayoutModifies": "Will affect fields:"
+  "Presets_LayoutModifies": "Will affect fields:",
+  "MainVM_ExportBypassTitle": "Export with Bypass Nodes",
+  "MainVM_ExportBypassMessage": "This workflow contains bypass nodes. How should it be exported?\n\n• Yes: Restore all connections before exporting. (Recommended for editing in ComfyUI)\n• No: Export with bypasses applied (as is). (For debugging)\n• Cancel: Cancel the export.",
+  "UIConstructor_ConfirmApiReplaceTitle": "Confirm API Replacement",
+  "UIConstructor_ConfirmApiReplaceMessage": "The current workflow contains bypass nodes. Replacing the API will clear connection snapshots, which is necessary for the changes to apply correctly.\n\nIt is recommended to first export the current state with all connections restored for editing.\n\nDo you want to continue with the replacement?",
 }
