feat: Enhance UI, fix bugs, and improve video streaming
This commit introduces several quality-of-life improvements, bug fixes, and a major performance enhancement for video playback.
    Implemented Smart Scrolling for Queue Manager:
        The mouse wheel scroll event is now passed through from the queue item list to the main ScrollViewer.
        This enables seamless scrolling across the entire Queue Manager panel, even when the cursor is over the list of tasks, providing a consistent user experience with other scrollable areas in the app.

    Fixed Wildcard Browser Functionality:
        The Wildcard Browser now correctly opens from text fields within undocked (floating) group windows. The logic was moved to a global handler to ensure it works regardless of the window context.
        Fixed a bug where inserting a wildcard would always append it to the end of the text. Insertion now correctly happens at the current cursor position (CaretIndex) in both the standard text field and the Advanced Prompt Editor.

    Added "Copy to Clipboard" in Fullscreen Viewer:
        A new button has been added to the fullscreen media controls that allows the user to copy the currently displayed image to the system clipboard.
        This feature is only available for images, not videos.

    Improved Video Streaming Performance:
        Significantly enhanced the performance of the InMemoryHttpServer by adding support for HTTP Range Requests.
        The server now correctly handles Range headers, allowing the MediaElement to stream large video files instead of downloading the entire file before playback can begin.
        This results in dramatically faster video start times and enables efficient seeking (scrubbing) through video content.

--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -363,4 +363,6 @@
   "MainVM_ExportBypassMessage": "This workflow contains bypass nodes. How should it be exported?\n\n• Yes: Restore all connections before exporting. (Recommended for editing in ComfyUI)\n• No: Export with bypasses applied (as is). (For debugging)\n• Cancel: Cancel the export.",
   "UIConstructor_ConfirmApiReplaceTitle": "Confirm API Replacement",
   "UIConstructor_ConfirmApiReplaceMessage": "The current workflow contains bypass nodes. Replacing the API will clear connection snapshots, which is necessary for the changes to apply correctly.\n\nIt is recommended to first export the current state with all connections restored for editing.\n\nDo you want to continue with the replacement?",
+  "Fullscreen_Copy": "Copy image to clipboard",
+  "Fullscreen_Copied": "Copied!"
 }
