--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -362,4 +362,6 @@
   "MainVM_ExportBypassMessage": "Этот процесс содержит узлы обхода (bypass). Как его следует экспортировать?\n\n• Да (Yes): Восстановить все соединения перед экспортом. (Рекомендуется для редактирования в ComfyUI)\n• Нет (No): Экспортировать 'как есть', с примененными байпасами. (Для отладки)\n• Отмена (Cancel): Отменить экспорт.",
   "UIConstructor_ConfirmApiReplaceTitle": "Подтвердите замену API",
   "UIConstructor_ConfirmApiReplaceMessage": "Текущий процесс содержит узлы обхода (bypass). Замена API очистит снимки соединений, что необходимо для корректного применения изменений.\n\nРекомендуется сначала экспортировать текущее состояние со всеми восстановленными соединениями для редактирования.\n\nВы хотите продолжить замену?",
+  "Fullscreen_Copy": "Копировать изображение в буфер обмена",
+  "Fullscreen_Copied": "Скопировано!"
 }
