--- a/Comfizen/assets/langs/en.json
+++ b/Comfizen/assets/langs/en.json
@@ -364,5 +364,10 @@
   "UIConstructor_ConfirmApiReplaceTitle": "Confirm API Replacement",
   "UIConstructor_ConfirmApiReplaceMessage": "The current workflow contains bypass nodes. Replacing the API will clear connection snapshots, which is necessary for the changes to apply correctly.\n\nIt is recommended to first export the current state with all connections restored for editing.\n\nDo you want to continue with the replacement?",
   "Fullscreen_Copy": "Copy image to clipboard",
-  "Fullscreen_Copied": "Copied!"
+  "Fullscreen_Copied": "Copied!",
+  "Presets_SortAlphabetical": "Sort Alphabetical",
+  "Presets_SortByDate": "Sort by Date",
+  "Presets_FilterByFields": "Filter by fields",
+  "Presets_FilterLogicOR": "OR",
+  "Presets_FilterLogicAND": "AND"
 }
