--- a/Comfizen/assets/langs/ru.json
+++ b/Comfizen/assets/langs/ru.json
@@ -363,5 +363,10 @@
   "UIConstructor_ConfirmApiReplaceTitle": "Подтвердите замену API",
   "UIConstructor_ConfirmApiReplaceMessage": "Текущий процесс содержит узлы обхода (bypass). Замена API очистит снимки соединений, что необходимо для корректного применения изменений.\n\nРекомендуется сначала экспортировать текущее состояние со всеми восстановленными соединениями для редактирования.\n\nВы хотите продолжить замену?",
   "Fullscreen_Copy": "Копировать изображение в буфер обмена",
-  "Fullscreen_Copied": "Скопировано!"
+  "Fullscreen_Copied": "Скопировано!",
+  "Presets_SortAlphabetical": "Сортировать по алфавиту",
+  "Presets_SortByDate": "Сортировать по дате",
+  "Presets_FilterByFields": "Фильтр по полям",
+  "Presets_FilterLogicOR": "ИЛИ",
+  "Presets_FilterLogicAND": "И"
 }
